sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:11: error: value || is not a member of Int
    if(ecart=9 || ecart=10){
               ^AlgCombSort11:11: error: type mismatch;
 found   : Unit
 required: Boolean
    if(ecart=9 || ecart=10){
            ^